--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -1,18 +1,20 @@
+android/ATTR_MINIFY=true
+android/ATTR_MINIFY.type=Boolean
 android/ATTR_PROJECT_NAME=DeviceTracker
 android/ATTR_PROJECT_NAME.type=String
 android/abi=armeabi
 android/abi.type=String
-android/distribute_path=/Users/sdowse/Documents
+android/distribute_path=C\:\\Users\\Samuel\\Documents
 android/distribute_path.type=String
-android/key_password=
+android/key_password=Suka8404
 android/key_password.type=String
-android/keystore_alias=Appceleratorgfd
+android/keystore_alias=samueldowse
 android/keystore_alias.type=String
-android/keystore_password=password
+android/keystore_password=Suka8404
 android/keystore_password.type=String
-android/keystore_path=/Users/sdowse/Library/android-sdk-macosx/appcelerator.keystore
+android/keystore_path=E\:\\AndroidSDK\\mykeystore.keystore
 android/keystore_path.type=String
-android/recent_output=/Users/sdowse/Documents
+android/recent_output=C\:\\Users\\Samuel\\Documents
 android/recent_output.type=String
 android/sdk_version=2.3.3
 android/sdk_version.type=String
