--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -6,13 +6,13 @@ android/abi=armeabi
 android/abi.type=String
 android/distribute_path=C\:\\Users\\Samuel\\Documents
 android/distribute_path.type=String
-android/key_password=Suka8404
+android/key_password=
 android/key_password.type=String
-android/keystore_alias=samueldowse
+android/keystore_alias=
 android/keystore_alias.type=String
-android/keystore_password=Suka8404
+android/keystore_password=
 android/keystore_password.type=String
-android/keystore_path=E\:\\AndroidSDK\\mykeystore.keystore
+android/keystore_path=
 android/keystore_path.type=String
 android/recent_output=C\:\\Users\\Samuel\\Documents
 android/recent_output.type=String
